--- a/app/templates/unitOfMeasurements/unitOfMeasurements.html
+++ b/app/templates/unitOfMeasurements/unitOfMeasurements.html
@@ -7,7 +7,7 @@ Units of Measurment
 {% block page_content %}
 <div>
     <ol class = "breadcrumb">
-        <li class = "active"><span class = "glyphicon glyphicon-home"></li>
+        <li class = "active"><span class = "glyphicon glyphicon-home"></span></li>
     </ol>
 </div>
 <div class = "page-header">
@@ -21,7 +21,7 @@ Units of Measurment
     <br><br>
 </div>
 <div>
-    <table id = "unitOfMeasurementsTable" class = "table">
+    <table id = "unitOfMeasurementsTable" class = "table" style = "width:100%">
         <thead>
             <tr>
                 <th>Name</th>
