--- a/app/templates/eventFrames/overlay.html
+++ b/app/templates/eventFrames/overlay.html
@@ -23,7 +23,7 @@ Event Frames
     </ol>
 </div>
 <div class = "page-header">
-        <h1>Event Frames<small> Overlay Selection</small></h1>
+        <h1>Event Frames<small> Overlay</small></h1>
 </div>
 {% if form %}
     <div>
